--- a/client/src/index.css
+++ b/client/src/index.css
@@ -62,6 +62,8 @@ body {
   min-height: 100svh;
   display: flex;
   flex-direction: column;
+  position: relative;
+  z-index: 1;
 }
 
 h1, h2, h3 {
